2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/09_int_mod_int_aff_int.deca
// Description :
// affécatation d'une opération de modulo entre deux ints dans un int 
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024



{
    int a = 4%2;
}