2A/05_Projet_GL/src/test/deca/context/invalid/complet/54_instanceof_class_int.deca
// Description :
//   instanceOf entre : class et int 
// Resultats :
//    ligne 9 :  l'opération instanceOf n'est pas possible entre 'A' et 'int'
// Historique :
//  cree le 16/01/2024

class A {

}

{
    A a ;

    a instanceof int ;
}